Initial commit: SmartTasks backend implementation